# wordpress-security-scanner-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  sites.txt  wordpress-scan  wp_cve_cache.db
output/pam.novadevelop.ca/: full_scan.json  security_report.md  summary.txt  vulnerabilities.csv
src/wp_scanner/: __init__.py  cli.py
src/wp_scanner/core/: __init__.py  batch.py  scanner.py
src/wp_scanner/databases/: __init__.py  plugin_db.py  vuln_db.py
src/wp_scanner/legacy/: advanced_wp_scanner.py  enhanced_scanner.py  wp_security_scanner.py
src/wp_scanner/payloads/: __init__.py  payloads.py
src/wp_scanner/scanners/: __init__.py  advanced_scanner.py  auth_scanner.py  backup_scanner.py  base.py  domain_scanner.py  header_scanner.py  injection_scanner.py  network_scanner.py  plugin_scanner.py  rest_api_scanner.py  xmlrpc_scanner.py
src/wp_scanner/utils/: __init__.py  http.py  logger.py  reporter.py
src/wp_security_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
